# lidar_based_obstacle_detection

./: .gitignore  CMakeLists.txt  package.xml
config/: params.yaml
include/lidar_based_obstacle_detection/: lidar_based_obstacle_detection_component.hpp  lidar_based_obstacle_detection_node.hpp
launch/: lidar_based_obstacle_detection_launch.py
rviz/: lidar_based_obstacle_detection.rviz
src/: lidar_based_obstacle_detection.cpp  lidar_based_obstacle_detection_component.cpp  lidar_based_obstacle_detection_node.cpp
