<?xml version="1.0"?>
<package format="3">
  <name>lidar_based_obstacle_detection</name>
  <version>0.1.0</version>
  <description>Obstacle detection from lidar</description>
  <maintainer email="gohans234@icloud.com">pei</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components/>
  </export>
</package>